--- a/discord-clone/index.css
+++ b/discord-clone/index.css
@@ -70,6 +70,254 @@ header {
     display: none;
 }
 
+
+
+/* header end -------------------------------------------------------------------------------------------------------------------------------------- */
+/* main start -------------------------------------------------------------------------------------------------------------------------------------- */
+
+
+
+
+
+
+
+
+
+
+/* main {
+    background: url(img/main-background.png);
+    height: 400px;
+    background-size: cover;
+    padding: 0 32px;
+    background-position: center;
+}
+
+.main-container {
+    max-width: 700px;
+    margin: 0 auto;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;    
+    align-items: center;
+    margin-bottom: 60px;
+}
+
+h1 {
+    color: white;
+    font-weight: bold;
+    font-size: 48px;
+    margin-bottom: 12px;
+}
+
+.serach-container {
+    width: 100%;
+    height: 40px;
+    position: relative;
+}
+
+.serach-container > input {
+    display: block;
+    width: 100%;
+    padding: 8px;
+    padding-left: 32px;
+    border: none;
+    border-radius: 8px;
+    color: gray;
+}
+
+.serach-icon {
+    position: absolute;
+    top: 50%;
+    left: 8px;
+    width: 18px;
+    height: 18px;
+    transform: translateY(-50%);
+}
+
+#help-main {
+    padding: 0 5px;
+    height: 500px;
+}
+
+h3, p {
+    text-align: center;
+}
+
+.help-contents-wrapper {
+    max-width: 700px;
+    height: 100%;
+
+}
+
+.help-contents-wrapper {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.help-content {
+    width: 240px;
+    height: 260px;
+    border: 1px solid #cccccc;
+    border-radius: ;
+    background: #ffffff;
+    margin: 10px;
+    padding: 5px;
+    text-decoration: none;
+}
+
+.content-heading {
+    color: var(--main-color);
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.content-heading:after {
+    width: 50px;
+    height: 1px;
+    background: #cccccc;
+    border: 1px solid #cccccc;
+
+}
+
+.content-explane {
+    color: #5e5776;
+    font-size: 12px;
+    font-weight: bold;
+}
+
+.help-content > a > img {
+    width: 212px;
+    height: 212px;
+}
+
+h3, p {
+    text-decoration: none;
+
+} */
+
+
+
+
+
+/* main end -------------------------------------------------------------------------------------------------------------------------------------- */
+/* section-first start -------------------------------------------------------------------------------------------------------------------------------------- */
+
+section {
+    padding: 0 32px;
+}
+
+#help-main {
+    text-align: center;
+
+}
+
+#help-main h2 {
+    font-size: 32px;
+    font-weight: bold;
+    margin-bottom: 24px;
+}
+
+.section-container {
+    padding-top: 64px;
+}
+
+.links {
+    text-decoration: none;
+    color: var(--main-color);
+}
+
+
+.links:hover {
+    text-decoration: underline;
+}
+
+
+.help-content {
+    width: 240px;
+    height: 260px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+}
+
+.help-content-img {
+    width: 106px;
+}
+
+.help-content > a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    padding: 12px;
+    box-sizing: border-box;
+    text-decoration: none;
+    /* none처리는 a태그에 적용해야 함. */
+}
+
+.content-heading {
+    color: var(--main-color);
+    font-size: 24px;
+    font-weight: bold;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.content-heading:after {
+    content: "";
+    display: block;
+    width: 80px;
+    height: 1px;
+    background: #ccc;
+    margin-top: 24px;
+    margin-bottom: 16px;
+
+}
+
+.content-explane {
+    color: #555;
+    font-size: 16px;
+}
+
+.help-contents-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    /* 컨텐츠 넘치면 줄바꿈 */
+    gap: 16px;
+    justify-content: center;
+    margin-top: 48px;
+}
+
+.help-content:hover {
+    background: #eee;
+}
+
+/* section-first end -------------------------------------------------------------------------------------------------------------------------------------- */
+/* section-second start -------------------------------------------------------------------------------------------------------------------------------------- */
+
+#more-help {
+    text-align: center;
+}
+
+#more-help h2 {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.help-content.diff {
+    width: 260px;
+}
+
+
+
+/* section-second end -------------------------------------------------------------------------------------------------------------------------------------- */
+/* footer start -------------------------------------------------------------------------------------------------------------------------------------- */
+
+/* footer end -------------------------------------------------------------------------------------------------------------------------------------- */
+/* animation start -------------------------------------------------------------------------------------------------------------------------------------- */
+
 @media screen and (max-width: 799px) {
 
     .hamberger-button {
@@ -81,4 +329,4 @@ header {
     }
 }
 
-/* header end -------------------------------------------------------------------------------------------------------------------------------------- */
+/* animation end -------------------------------------------------------------------------------------------------------------------------------------- */
